--- a/KeyHouse-BACK/package.json
+++ b/KeyHouse-BACK/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
@@ -19,6 +21,6 @@
     "pg": "^8.13.1"
   },
   "devDependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.5.0"
   }
 }
