Se crea la carpeta docs y se organiza la documentación respectiva para el repositorio

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@ build/Release
 
 # Dependency directories
 node_modules/
+KeyHouse-FRONT/node_modules/
+KeyHouse-BACK/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
